--- a/AWG/AWG_simple_test/AWG connection test.ipynb
+++ b/AWG/AWG_simple_test/AWG connection test.ipynb
@@ -2,94 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from stlab.devices.BFWrapper import BFWrapper"
+    "import visa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = BFWrapper('172.22.225.62')"
+    "rm = visa.ResourceManager()  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RDGK? 5\n",
-      "b'+887.948E-03'\n",
-      "b'#EOT'\n",
-      "+887.948E-03\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a = temp.GetTemperature(5)"
+    "dev1 = rm.open_resource('TCPIP::192.168.1.27::1234::SOCKET',read_termination='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.887948\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'SONY/TEK,AWG520,0,SCPI:95.0 OS:1.0 USR:1.3a'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(a)"
+    "dev1.query('*IDN?')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RDGK? 6\n",
-      "b'+0.00000E+00'\n",
-      "b'#EOT'\n",
-      "+0.00000E+00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "b = temp.GetTemperature(6)"
+    "dev1.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(b)"
+    "dev2 = rm.open_resource('TCPIP::192.168.1.28::4000::SOCKET',read_termination='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev2.query('*IDN?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dev2.close()"
    ]
   },
   {
